// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<h1>
  Viewing 
  1
   
  expense
   totalling 
  $2.34
</h1>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<h1>
  Viewing 
  11
   
  expenses
   totalling 
  $94.34
</h1>
`;
